feat(api/web): allow downloading in various video formats
